@@ -1,3 +1,7 @@
+2011-04-27
+* start on extracting XML descriptions from Windows installers so we can make
+better guesses as to which program to use to unpack the data
+
 2011-04-03
 * add extra ext2 sanity checks to vastly speed up scanning
 
